test_scores/negative_dimers/features/Q6PKG0.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q6PKG0.pkl.xz